--- a/brb.html
+++ b/brb.html
@@ -56,10 +56,10 @@
 }
 )();
 </script>
-<iframe width="640" height="360" scrolling="no" frameborder="0" style="border: none;" src="https://seed307.bitchute.com/BgHuE0qHcMib/M6nKM55jntJE.mp4" type='video/mp4; iframe="allow-top-navigation allow-scripts allow-forms"  > 
+<iframe width="640" height="360" scrolling="no" frameborder="0" style="border: none;" src="https://www.youtube.com/watch?v=SP5O2iAWDr4&t=3s" type='video/mp4; iframe="allow-top-navigation allow-scripts allow-forms"  > 
 <p> looking for nearby huffers that can host to ppbate irl... Hit me up!!</p> 
 (function () {
-  if ('src='! == $ ('onclick'). attr ('https://seed307.bitchute.com/BgHuE0qHcMib/M6nKM55jntJE.mp4')) {
+  if ('src='! == $ ('onclick'). attr ('https://www.youtube.com/watch?v=SP5O2iAWDr4&t=3s')) {
     window.top.location.href ="https://www.patreon.com/gclubmen";
   }
 });
