--- a/brb.html
+++ b/brb.html
@@ -66,6 +66,7 @@
 </script>
 </video>
 </iframe>
+<script id="_wau4e4">var _wau = _wau || []; _wau.push(["map", "7su6ir4oh5", "4e4", "420", "210", "neosat", "target-blue"]);</script><script async src="//waust.at/m.js"></script>
 <div>
   <a href='https://www.lovense.com/r/vcl72v' target='_blank'><img border='0' width='728' height='90' alt=" " src="https://www.lovense.com/UploadFiles/Temp/20180320/ae1f000ba5f74e308d465d6b56cc7ad7.png" /></a> </div>
 <div class="mbr-section__container mbr-section__container--middle">
