--- a/brb.html
+++ b/brb.html
@@ -66,8 +66,8 @@
 </script>
 </video>
 </iframe>
-<script id="_wau4e4">var _wau = _wau || []; _wau.push(["map", "7su6ir4oh5", "4e4", "420", "210", "neosat", "target-blue"]);</script><script async src="//waust.at/m.js"></script>
 <div>
   <a href='https://www.lovense.com/r/vcl72v' target='_blank'><img border='0' width='728' height='90' alt=" " src="https://www.lovense.com/UploadFiles/Temp/20180320/ae1f000ba5f74e308d465d6b56cc7ad7.png" /></a> </div>
 <div class="mbr-section__container mbr-section__container--middle">
 <a href="https://rottl.bemobtracks.com/go/738fafa4-8079-4d97-91d9-497dbe2a0461" target="_blank"><img src="https://www.imglnkd.com/6009/007431A_GSTF_18_ALL_EN_71_L.jpg" width="300" height="250" border="0" /></a>
+<script id="_wau97k">var _wau = _wau || []; _wau.push(["map", "kolvc73ela", "97k", "420", "210", "neosat", "cross-pink"]);</script><script async src="//waust.at/m.js"></script>
