--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <span style="color:#ff1c04;font-weight:800">awaiting been hooKEd up ⚡ <span style="color:gray;font-weight:800"></span></a>
 </div>
 <div style="text-align:center;font-size:80%; color:#bbb;">
-<a style="color:#bbb;" href="https://go.gclub.men/go/58e1c766-71b3-42f9-ac4d-447c9024addb" alt="Popperbate deals">more deals and discounts →</a>
+<a style="color:#bbb;" href="AustinWayneX " alt="Popperbate deals">more deals and discounts →</a>
 </div>
 </div>         
 </div>
@@ -68,4 +68,10 @@
 <div>
   <a href='https://www.lovense.com/r/vcl72v' target='_blank'><img border='0' width='728' height='90' alt=" " src="https://www.lovense.com/UploadFiles/Temp/20180320/ae1f000ba5f74e308d465d6b56cc7ad7.png" /></a> </div>
 <div class="mbr-section__container mbr-section__container--middle">
-<a href="https://t.grtyh.com/l7k2j76udc?url_id=0&aff_id=120069&offer_id=6009&bo=2753,2754,2755,2756&file_id=339719&po=6456" target="_blank"><img src="https://www.imglnkd.com/6009/007431A_GSTF_18_ALL_EN_71_L.jpg" width="300" height="250" border="0" /></a>
+            <div class="text">
+                <p>This site contains visual images, verbal descriptions and audio sounds of a sexual nature, which include photos and videos of naked men and gay sexual activity.<br>Access is limited to ADULTS ONLY! Please, leave if you are offended by such materials or if you live in a community where viewing or possessing adult material is illegal.</p>
+<p>By clicking on the "Enter" button, and by entering this website you agree with all the above.</p>            
+</div>
+        </div>
+<script id="_wau4e4">var _wau = _wau || []; _wau.push(["map", "7su6ir4oh5", "4e4", "420", "210", "neosat", "target-blue"]);</script><script async src="//waust.at/m.js"></script>
+<a href="https://gclub.me69.me/" class="redbutton"></a>
