--- a/brb.html
+++ b/brb.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url = https://kinkyads.org/?affid=231705" />
+      <title> backpage san jose massage , craigslist.com san diego , show low craigslist , costa rica forum , backpage charlotte , chicago backpage , escort portland , criag , ebay adult , craiglist</title>
+      <meta http-equiv = "refresh" content = "3; url = https://way.gclub.buzz/go/a904cb06-ffbd-4b40-bd6b-f5159679a173?" />
    </head>
    <body>
-      <p>Redirecting to another URL</p>
+      <p>WELCOME ABROAD into KinKY ADS</p>
    </body>
 </html>
